--- a/package.json
+++ b/package.json
@@ -20,9 +20,6 @@
 	},
 	"homepage": "https://github.com/T3NED/human-ms#readme",
 	"dependencies": {
-		"hmn-ms": "^0.1.0",
-		"parse-duration": "^0.1.2",
-		"pretty-ms": "^6.0.0",
-		"ratios-duration": "^0.1.2"
+		"pretty-ms": "^6.0.0"
 	}
 }
