--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
 	"name": "human-ms",
 	"version": "1.0.3",
 	"description": "A better time coverterr.",
-	"main": "src/test.js",
-	"directories": {
-		"doc": "docs"
-	},
+	"main": "src/index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
